# pesarifu

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .sqllsrc.json  Caddyfile  LICENSE  README.md  justfile  package-lock.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 48e0643fa971_initial_migration.py  6e6e9fc78065_initial_migration.py  da1f60c82d16_initial_migration.py  e7a3b53426f3_create_contact_request_table.py
doc/: app-structure.md  reports.md
docs/: adding-financial-providers.md  app-structure.md  architecture.md  database.md  deploy.md  libs.md  maintenance-checklist.md  monitoring.md  tasks-workflow.md
examples/: kenyan_names.txt
services/: app.service  tasks.service
src/pesarifu/: models.py
src/pesarifu/api/: app.py
src/pesarifu/config/: celery.py  config.py  constants.py  settings.toml
src/pesarifu/db/: load.py  models.py  seed.py  util.py
src/pesarifu/templates/: base.html  email-report.html.jinja  error.html  index.html  privacy-policy.html  success.html
src/pesarifu/util/: export.py  helpers.py  notify.py  tasks.py
src/reports/: README.md  evidence.plugins.yaml  package-lock.json  package.json
src/reports/components/: Logo.svelte  MyHeader.svelte
src/reports/pages/: +layout.svelte  [user_uuid].md  users.md
src/website/: .env.example  package-lock.json  package.json
tests/: test_details_parser.py
website/: .env  .env.example  package-lock.json  package.json  tailwind.config.js
website/public/: index.html
website/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
(+66 files in other folders)
